Ajout parcours professionnel

--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
-                <p>Vous pouvez me contacter pour toute questions via le formulaire ci-dessous ou directement à mon adresse mail :
+                <p class="text-justify">Vous pouvez me contacter pour toute questions via le formulaire ci-dessous ou directement à mon adresse mail :
                     <script>
                         genererAdresse();
                     </script>
