--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Mon Portfolio</title>
     <link rel="stylesheet" href="css/style-general.css">
     <link rel="stylesheet" href="css/style-menu.css">
+    <link rel="stylesheet" href="css/style-footer.css"
     <!-- BOOTSTRAP -->
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -33,7 +34,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="index.html">
-                        <h1>Axel FT<small>Portfolio</small></h1>
+                        <h1>Axel FT  <small>Portfolio</small></h1>
                     </a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -50,7 +51,7 @@
                                 <li><a href="parcours-personnel.html">Personnel</a></li>
                             </ul>
                         </li>
-                        <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Fichiers et Liens <span class="caret"></span></a>
+                        <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Fichiers/Liens <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a target="_blank" href="files/CV_Axel_Floquet-Trillot.pdf">CV (PDF)</a></li>
                                 <li role="separator" class="divider"></li>
