--- a/parcours-professionnel.html
+++ b/parcours-professionnel.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style-general.css">
     <link rel="stylesheet" href="css/style-menu.css">
     <link rel="stylesheet" href="css/style-parcours-pro.css">
+    <link rel="stylesheet" href="css/style-footer.css"
     <!-- BOOTSTRAP -->
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -34,7 +35,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="index.html">
-                        <h1>Axel FT<small>Portfolio</small></h1>
+                        <h1>Axel FT  <small>Portfolio</small></h1>
                     </a>
                 </div>
                 <!-- FIN Titre site et logo menu mobile -->
@@ -49,7 +50,7 @@
                                 <li><a href="parcours-personnel.html">Personnel</a></li>
                             </ul>
                         </li>
-                        <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Fichiers et Liens<span class="caret"></span></a>
+                        <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Fichiers/Liens<span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a target="_blank" href="files/CV_Axel_Floquet-Trillot.pdf">CV (PDF)</a></li>
                                 <li role="separator" class="divider"></li>
@@ -188,6 +189,15 @@
         </div>
     </div>
     <!-- FIN container -->
+    <footer>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-12">
+                    <p>Copyright</p>
+                </div>
+            </div>
+        </div>
+    </footer>
     <!-- JQUERY ET BOOTSRAP JS-->
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
