--- a/parcours-professionnel.html
+++ b/parcours-professionnel.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="css/style-general.css">
     <link rel="stylesheet" href="css/style-menu.css">
     <link rel="stylesheet" href="css/style-parcours-pro.css">
-    <link rel="stylesheet" href="css/style-footer.css"
     <!-- BOOTSTRAP -->
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -67,135 +66,133 @@
             <!-- FIN container-fluid -->
         </nav>
     </header>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <!-- DEBUT Onglets -->
-                <ul class="nav nav-pills nav-justified" role="tablist">
-                    <li class="active" role="presentation"><a href="#etudes" aria-controls="etudes" role="tab" data-toggle="pill"><strong>Etudes</strong></a></li>
-                    <li role="presentation"><a href="#stages" aria-controls="stages" role="tab" data-toggle="pill"><strong>Stages</strong></a></li>
-                    <li role="presentation"><a href="#associatif" aria-controls="associatif" role="tab" data-toggle="pill"><strong>Associatif</strong></a></li>
-                </ul>
-                <!-- FIN Onglets -->
-            </div>
-        </div>
-        <div class="row text-justify">
-            <div class="col-sm-12">
-                <!-- DEBUT Contenu Onglets -->
-                <div class="tab-content">
-                    <!-- DEBUT Etudes -->
-                    <div class="row tab-pane fade in active" id="etudes">
-                        <div class="col-xs-12 col-sm-9 col-md-10">
-                            <dl class="dl-horizontal">
-                                <dt>2009 - 2012</dt>
-                                <dd><strong>Etudes secondaires au Lycée Hoche à Versailles</strong></dd>
-                                <dt><span class="glyphicon glyphicon-education" aria-hidden="true"></span> Juin 2012</dt>
-                                <dd>
-                                    <strong>Obtention du Baccalauréat Général Scientifique</strong>
-                                    <ul>
-                                        <li>Option Sciences de la Vie et de la Terre</li>
-                                        <li>Spécialité Physique - Chimie</li>
-                                        <li>Mention Bien </li>
-                                    </ul>
-                                </dd>
-                            </dl>
-                            <hr>
-                            <dl class="dl-horizontal">
-                                <dt>2012 - 2014</dt>
-                                <dd>
-                                    <strong>Entrée en PACES à Paris Descartes</strong>
-                                    <ul>
-                                        <li>Redoublement en 2013</li>
-                                        <li>Reçu-collé au concours en 2014</li>
-                                    </ul>
-                                </dd>
-                                <dt>2014 - 2016</dt>
-                                <dd><strong>Entrée en L2 Sciences pour la Santé (Université Paris Descartes) en équivalence en septembre 2014</strong>
-                                    <ul>
-                                        <li>Obtention de la 2ème année de licence (L2) en 1ère session</li>
-                                        <li>Obtention de la 3ème année de licence (L3) en 1ère session</li>
-                                    </ul>
-                                </dd>
-                                <dt><span class="glyphicon glyphicon-education" aria-hidden="true"></span> Juin 2016</dt>
-                                <dd><strong>Obtention de la licence Sciences et Technologies - Mention Sciences pour la Santé</strong></dd>
-                            </dl>
-                            <hr>
-                            <dl class="dl-horizontal">
-                                <dt>2016 - 2017</dt>
-                                <dd><strong>Entrée en 1ère année d'Ingésup (B1) sur le campus d'Ynov Paris</strong></dd>
-                            </dl>
-                        </div>
-                        <div class="col-sm-3 col-md-2 hidden-xs">
-                            <img src="img/parcours-pro/hoche.jpg" alt="" class="img-responsive img-rounded center-block" width="90" id="logo-hoche">
-                            <img src="img/parcours-pro/descartes.png" alt="" class="img-responsive img-rounded center-block" id="logo-descartes">
-                            <img src="img/parcours-pro/ingesup.jpg" alt="" class="img-responsive img-rounded center-block" id="logo-ingesup">
-                        </div>
-                    </div>
-                    <!-- FIN Etudes -->
-                    <!-- DEBUT Stages -->
-                    <div class="row tab-pane fade" id="stages">
-                        <div class="col-xs-12 col-sm-9 col-md-8">
-                            <dl class="dl-horizontal">
-                                <dt>Février 2009</dt>
-                                <dd>
-                                    <strong>Stage d'une semaine à Grand Optical</strong>
-                                    <ul>
-                                        <li>Fabrication de verres de lunettes et montage</li>
-                                        <li>Accueil des clients</li>
-                                    </ul>
-                                </dd>
-                            </dl>
-                        </div>
-                        <div class="col-sm-3 col-md-4 hidden-xs">
-                            <img src="img/parcours-pro/grandoptical.png" alt="" class="img-responsive img-rounded center-block" id="logo-grdopt">
-                        </div>
-                    </div>
-                    <!-- FIN Stages -->
-                    <!-- DEBUT Associatif -->
-                    <div class="row tab-pane fade" id="associatif">
-                        <div class="col-xs-12 col-sm-9 col-md-8">
-                            <dl class="dl-horizontal">
-                                <dt>2014 - 2015</dt>
-                                <dd><strong>Membre Actif de l'Amicale Paris Sciences</strong>
-                                    <ul>
-                                        <li>Réalisation de projets tout au long de l'année :
-                                            <ul>
-                                                <li>De nombreux petits projets</li>
-                                                <li>Quelques projets de plus grande importance</li>
-                                            </ul>
-                                        </li>
-                                        <li>Organisation d'événements :
-                                            <ul>
-                                                <li>Des petits déjeuners ou des afterworks</li>
-                                                <li>Des soirées ou des voyages</li>
-                                            </ul>
-                                        </li>
-                                    </ul>
-                                </dd>
-                                <dt>2015 - 2016</dt>
-                                <dd><strong>Vice-Président chargé de communication à l'Amicale Paris Sciences</strong></dd>
-                                <dt>2016 - 2017</dt>
-                                <dd><strong>Membre Ancien de l'Amicale Paris Sciences</strong></dd>
-                            </dl>
-                        </div>
-                        <div class="col-sm-3 col-md-4 hidden-xs">
-                            <img src="img/parcours-pro/aps.png" alt="" class="img-responsive img-rounded center-block" id="logo-aps" width="200">
-                        </div>
-                    </div>
-                    <!-- FIN Associatif -->
-                </div>
-            </div>
-            <!-- FIN Conetnu Onglets -->
-        </div>
-    </div>
-    <!-- FIN container -->
-    <footer>
-        <div class="container-fluid">
+    <div id="wrapper">
+        <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <p>Copyright</p>
+                    <!-- DEBUT Onglets -->
+                    <ul class="nav nav-pills nav-justified" role="tablist">
+                        <li class="active" role="presentation"><a href="#etudes" aria-controls="etudes" role="tab" data-toggle="pill"><strong>Etudes</strong></a></li>
+                        <li role="presentation"><a href="#stages" aria-controls="stages" role="tab" data-toggle="pill"><strong>Stages</strong></a></li>
+                        <li role="presentation"><a href="#associatif" aria-controls="associatif" role="tab" data-toggle="pill"><strong>Associatif</strong></a></li>
+                    </ul>
+                    <!-- FIN Onglets -->
                 </div>
             </div>
+            <div class="row text-justify">
+                <div class="col-sm-12">
+                    <!-- DEBUT Contenu Onglets -->
+                    <div class="tab-content">
+                        <!-- DEBUT Etudes -->
+                        <div class="row tab-pane fade in active" id="etudes">
+                            <div class="col-xs-12 col-sm-9 col-md-10">
+                                <dl class="dl-horizontal">
+                                    <dt>2009 - 2012</dt>
+                                    <dd><strong>Etudes secondaires au Lycée Hoche à Versailles</strong></dd>
+                                    <dt><span class="glyphicon glyphicon-education" aria-hidden="true"></span> Juin 2012</dt>
+                                    <dd>
+                                        <strong>Obtention du Baccalauréat Général Scientifique</strong>
+                                        <ul>
+                                            <li>Option Sciences de la Vie et de la Terre</li>
+                                            <li>Spécialité Physique - Chimie</li>
+                                            <li>Mention Bien </li>
+                                        </ul>
+                                    </dd>
+                                </dl>
+                                <hr>
+                                <dl class="dl-horizontal">
+                                    <dt>2012 - 2014</dt>
+                                    <dd>
+                                        <strong>Entrée en PACES à Paris Descartes</strong>
+                                        <ul>
+                                            <li>Redoublement en 2013</li>
+                                            <li>Reçu-collé au concours en 2014</li>
+                                        </ul>
+                                    </dd>
+                                    <dt>2014 - 2016</dt>
+                                    <dd><strong>Entrée en L2 Sciences pour la Santé (Université Paris Descartes) en équivalence en septembre 2014</strong>
+                                        <ul>
+                                            <li>Obtention de la 2ème année de licence (L2) en 1ère session</li>
+                                            <li>Obtention de la 3ème année de licence (L3) en 1ère session</li>
+                                        </ul>
+                                    </dd>
+                                    <dt><span class="glyphicon glyphicon-education" aria-hidden="true"></span> Juin 2016</dt>
+                                    <dd><strong>Obtention de la licence Sciences et Technologies - Mention Sciences pour la Santé</strong></dd>
+                                </dl>
+                                <hr>
+                                <dl class="dl-horizontal">
+                                    <dt>2016 - 2017</dt>
+                                    <dd><strong>Entrée en 1ère année d'Ingésup (B1) sur le campus d'Ynov Paris</strong></dd>
+                                </dl>
+                            </div>
+                            <div class="col-sm-3 col-md-2 hidden-xs">
+                                <img src="img/parcours-pro/hoche.jpg" alt="" class="img-responsive img-rounded center-block" width="90" id="logo-hoche">
+                                <img src="img/parcours-pro/descartes.png" alt="" class="img-responsive img-rounded center-block" id="logo-descartes">
+                                <img src="img/parcours-pro/ingesup.jpg" alt="" class="img-responsive img-rounded center-block" id="logo-ingesup">
+                            </div>
+                        </div>
+                        <!-- FIN Etudes -->
+                        <!-- DEBUT Stages -->
+                        <div class="row tab-pane fade" id="stages">
+                            <div class="col-xs-12 col-sm-9 col-md-8">
+                                <dl class="dl-horizontal">
+                                    <dt>Février 2009</dt>
+                                    <dd>
+                                        <strong>Stage d'une semaine à Grand Optical</strong>
+                                        <ul>
+                                            <li>Fabrication de verres de lunettes et montage</li>
+                                            <li>Accueil des clients</li>
+                                        </ul>
+                                    </dd>
+                                </dl>
+                            </div>
+                            <div class="col-sm-3 col-md-4 hidden-xs">
+                                <img src="img/parcours-pro/grandoptical.png" alt="" class="img-responsive img-rounded center-block" id="logo-grdopt">
+                            </div>
+                        </div>
+                        <!-- FIN Stages -->
+                        <!-- DEBUT Associatif -->
+                        <div class="row tab-pane fade" id="associatif">
+                            <div class="col-xs-12 col-sm-9 col-md-8">
+                                <dl class="dl-horizontal">
+                                    <dt>2014 - 2015</dt>
+                                    <dd><strong>Membre Actif de l'Amicale Paris Sciences</strong>
+                                        <ul>
+                                            <li>Réalisation de projets tout au long de l'année :
+                                                <ul>
+                                                    <li>De nombreux petits projets</li>
+                                                    <li>Quelques projets de plus grande importance</li>
+                                                </ul>
+                                            </li>
+                                            <li>Organisation d'événements :
+                                                <ul>
+                                                    <li>Des petits déjeuners ou des afterworks</li>
+                                                    <li>Des soirées ou des voyages</li>
+                                                </ul>
+                                            </li>
+                                        </ul>
+                                    </dd>
+                                    <dt>2015 - 2016</dt>
+                                    <dd><strong>Vice-Président chargé de communication à l'Amicale Paris Sciences</strong></dd>
+                                    <dt>2016 - 2017</dt>
+                                    <dd><strong>Membre Ancien de l'Amicale Paris Sciences</strong></dd>
+                                </dl>
+                            </div>
+                            <div class="col-sm-3 col-md-4 hidden-xs">
+                                <img src="img/parcours-pro/aps.png" alt="" class="img-responsive img-rounded center-block" id="logo-aps" width="200">
+                            </div>
+                        </div>
+                        <!-- FIN Associatif -->
+                    </div>
+                </div>
+                <!-- FIN Conetnu Onglets -->
+            </div>
+        </div>
+        <!-- FIN container -->
+    </div>
+    <footer class="navbar navbar-default navbar-fixed-bottom">
+        <div class="container">
+            <p class="text-muted">Copyright</p>
         </div>
     </footer>
     <!-- JQUERY ET BOOTSRAP JS-->
