Ajout parcours professionnel

--- a/parcours-professionnel.html
+++ b/parcours-professionnel.html
@@ -73,7 +73,7 @@
                     <!-- DEBUT Onglets -->
                     <ul class="nav nav-pills nav-justified" role="tablist">
                         <li class="active" role="presentation"><a href="#etudes" aria-controls="etudes" role="tab" data-toggle="pill"><strong>Etudes</strong></a></li>
-                        <li role="presentation"><a href="#stages" aria-controls="stages" role="tab" data-toggle="pill"><strong>Stages</strong></a></li>
+                        <li role="presentation"><a href="#stages" aria-controls="stage" role="tab" data-toggle="pill"><strong>Stage</strong></a></li>
                         <li role="presentation"><a href="#associatif" aria-controls="associatif" role="tab" data-toggle="pill"><strong>Associatif</strong></a></li>
                     </ul>
                     <!-- FIN Onglets -->
@@ -84,56 +84,86 @@
                     <!-- DEBUT Contenu Onglets -->
                     <div class="tab-content">
                         <!-- DEBUT Etudes -->
-                        <div class="row tab-pane fade in active" id="etudes">
-                            <div class="col-xs-12 col-sm-9 col-md-10">
-                                <dl class="dl-horizontal">
-                                    <dt>2009 - 2012</dt>
-                                    <dd><strong>Etudes secondaires au Lycée Hoche à Versailles</strong></dd>
-                                    <dt><span class="glyphicon glyphicon-education" aria-hidden="true"></span> Juin 2012</dt>
-                                    <dd>
-                                        <strong>Obtention du Baccalauréat Général Scientifique</strong>
-                                        <ul>
-                                            <li>Option Sciences de la Vie et de la Terre</li>
-                                            <li>Spécialité Physique - Chimie</li>
-                                            <li>Mention Bien </li>
-                                        </ul>
-                                    </dd>
-                                </dl>
-                                <hr>
-                                <dl class="dl-horizontal">
-                                    <dt>2012 - 2014</dt>
-                                    <dd>
-                                        <strong>Entrée en PACES à Paris Descartes</strong>
-                                        <ul>
-                                            <li>Redoublement en 2013</li>
-                                            <li>Reçu-collé au concours en 2014</li>
-                                        </ul>
-                                    </dd>
-                                    <dt>2014 - 2016</dt>
-                                    <dd><strong>Entrée en L2 Sciences pour la Santé (Université Paris Descartes) en équivalence en septembre 2014</strong>
-                                        <ul>
-                                            <li>Obtention de la 2ème année de licence (L2) en 1ère session</li>
-                                            <li>Obtention de la 3ème année de licence (L3) en 1ère session</li>
-                                        </ul>
-                                    </dd>
-                                    <dt><span class="glyphicon glyphicon-education" aria-hidden="true"></span> Juin 2016</dt>
-                                    <dd><strong>Obtention de la licence Sciences et Technologies - Mention Sciences pour la Santé</strong></dd>
-                                </dl>
-                                <hr>
-                                <dl class="dl-horizontal">
-                                    <dt>2016 - 2017</dt>
-                                    <dd><strong>Entrée en 1ère année d'Ingésup (B1) sur le campus d'Ynov Paris</strong></dd>
-                                </dl>
+                        <div class="tab-pane fade in active" id="etudes">
+                            <div class="row">
+                                <div class="col-xs-6 col-xs-offset-3 visible-xs">
+                                    <img src="img/parcours-pro/hoche.jpg" alt="" class="img-responsive img-rounded center-block" width="130" id="logo-hoche">
+                                    <br>
+                                </div>
+                                <div class="col-xs-12 col-sm-9 col-md-10">
+                                    <dl class="dl-horizontal">
+                                        <dt>2009 - 2012</dt>
+                                        <dd><strong>Etudes secondaires au Lycée Hoche à Versailles</strong></dd>
+                                        <dt><span class="glyphicon glyphicon-education" aria-hidden="true"></span> Juin 2012</dt>
+                                        <dd>
+                                            <strong>Obtention du Baccalauréat Général Scientifique</strong>
+                                            <ul>
+                                                <li>Option Sciences de la Vie et de la Terre</li>
+                                                <li>Spécialité Physique - Chimie</li>
+                                                <li>Mention Bien </li>
+                                            </ul>
+                                        </dd>
+                                    </dl>
+                                </div>
+                                <div class="hidden-xs col-sm-3 col-md-2">
+                                    <img src="img/parcours-pro/hoche.jpg" alt="" class="img-responsive img-rounded center-block" width="90" id="logo-hoche">
+                                </div>
                             </div>
-                            <div class="col-sm-3 col-md-2 hidden-xs">
-                                <img src="img/parcours-pro/hoche.jpg" alt="" class="img-responsive img-rounded center-block" width="90" id="logo-hoche">
-                                <img src="img/parcours-pro/descartes.png" alt="" class="img-responsive img-rounded center-block" id="logo-descartes">
-                                <img src="img/parcours-pro/ingesup.jpg" alt="" class="img-responsive img-rounded center-block" id="logo-ingesup">
+                            <hr>
+                            <div class="row">
+                                <div class="col-xs-6 col-xs-offset-3 visible-xs">
+                                    <img src="img/parcours-pro/descartes.png" alt="" class="img-responsive img-rounded center-block" id="logo-descartes">
+                                    <br>
+                                </div>
+                                <div class="col-xs-12 col-sm-9 col-md-10">
+                                    <dl class="dl-horizontal">
+                                        <dt>2012 - 2014</dt>
+                                        <dd>
+                                            <strong>Entrée en PACES à Paris Descartes</strong>
+                                            <ul>
+                                                <li>Redoublement en 2013</li>
+                                                <li>Reçu-collé au concours en 2014</li>
+                                            </ul>
+                                        </dd>
+                                        <dt>2014 - 2016</dt>
+                                        <dd><strong>Entrée en L2 Sciences pour la Santé (Université Paris Descartes) en équivalence en septembre 2014</strong>
+                                            <ul>
+                                                <li>Obtention de la 2ème année de licence (L2) en 1ère session</li>
+                                                <li>Obtention de la 3ème année de licence (L3) en 1ère session</li>
+                                            </ul>
+                                        </dd>
+                                        <dt><span class="glyphicon glyphicon-education" aria-hidden="true"></span> Juin 2016</dt>
+                                        <dd><strong>Obtention de la licence Sciences et Technologies - Mention Sciences pour la Santé</strong></dd>
+                                    </dl>
+                                </div>
+                                <div class="hidden-xs col-sm-3 col-md-2">
+                                    <img src="img/parcours-pro/descartes.png" alt="" class="img-responsive img-rounded center-block" id="logo-descartes">
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <div class="col-xs-6 col-xs-offset-3 visible-xs">
+                                    <img src="img/parcours-pro/ingesup.jpg" alt="" class="img-responsive img-rounded center-block" id="logo-ingesup">
+                                    <br>
+                                </div>
+                                <div class="col-xs-12 col-sm-9 col-md-10">
+                                    <dl class="dl-horizontal">
+                                        <dt>2016 - 2017</dt>
+                                        <dd><strong>Entrée en 1ère année d'Ingésup (B1) sur le campus d'Ynov Paris</strong></dd>
+                                    </dl>
+                                </div>
+                                <div class="hidden-xs col-sm-3 col-md-2">
+                                    <img src="img/parcours-pro/ingesup.jpg" alt="" class="img-responsive img-rounded center-block" id="logo-ingesup">
+                                </div>
                             </div>
                         </div>
                         <!-- FIN Etudes -->
                         <!-- DEBUT Stages -->
                         <div class="row tab-pane fade" id="stages">
+                            <div class="visible-xs col-xs-offset-3 col-xs-6">
+                                <img src="img/parcours-pro/grandoptical.png" alt="" class="img-responsive img-rounded center-block" id="logo-grdopt">
+                                <br>
+                            </div>
                             <div class="col-xs-12 col-sm-9 col-md-8">
                                 <dl class="dl-horizontal">
                                     <dt>Février 2009</dt>
@@ -146,13 +176,17 @@
                                     </dd>
                                 </dl>
                             </div>
-                            <div class="col-sm-3 col-md-4 hidden-xs">
+                            <div class="hidden-xs col-sm-3 col-md-4">
                                 <img src="img/parcours-pro/grandoptical.png" alt="" class="img-responsive img-rounded center-block" id="logo-grdopt">
                             </div>
                         </div>
                         <!-- FIN Stages -->
                         <!-- DEBUT Associatif -->
                         <div class="row tab-pane fade" id="associatif">
+                            <div class="visible-xs col-xs-offset-3 col-xs-6">
+                                <img src="img/parcours-pro/aps.png" alt="" class="img-responsive img-rounded center-block" id="logo-aps" width="200">
+                                <br>
+                            </div>
                             <div class="col-xs-12 col-sm-9 col-md-8">
                                 <dl class="dl-horizontal">
                                     <dt>2014 - 2015</dt>
@@ -178,7 +212,7 @@
                                     <dd><strong>Membre Ancien de l'Amicale Paris Sciences</strong></dd>
                                 </dl>
                             </div>
-                            <div class="col-sm-3 col-md-4 hidden-xs">
+                            <div class="hidden-xs col-sm-3 col-md-4">
                                 <img src="img/parcours-pro/aps.png" alt="" class="img-responsive img-rounded center-block" id="logo-aps" width="200">
                             </div>
                         </div>
