Ajout parcours professionnel

--- a/contact.html
+++ b/contact.html
@@ -95,7 +95,7 @@
                             <input type="email" name="email" id="email" class="form-control" required title="Entrez votre adresse mail" placeholder="adresse@example.com"> </div>
                         <label for="tel" class="col-sm-2 control-label">Téléphone</label>
                         <div class="col-sm-4">
-                            <input type="tel" name="tel" id="tel" class="form-control" required title="Entrez votre numéro de téléphone" placeholder="XXXXXXXXXX" pattern="[0-9]{10}" maxlength="10"> </div>
+                            <input type="tel" name="tel" id="tel" class="form-control" required title="Entrez votre numéro de téléphone" placeholder="0XXXXXXXXX" pattern="[0][12345679][0-9]{8}" maxlength="10"> </div>
                     </div>
                     <div class="form-group">
                         <div class="col-sm-12">
