Modif parcours pro

--- a/parcours-professionnel.html
+++ b/parcours-professionnel.html
@@ -161,17 +161,23 @@
                     <!-- FIN Etudes -->
                     <!-- DEBUT Stages -->
                     <div class="row tab-pane fade" id="stages">
-                        <div class="visible-xs col-xs-offset-3 col-xs-6"> <img src="img/parcours-pro/grandoptical.png" alt="" class="img-responsive img-rounded center-block" id="logo-grdopt">
-                            <br> </div>
-                        <div class="col-xs-12 col-sm-9 col-md-8">
-                            <dl class="dl-horizontal"> <dt>Février 2009</dt>
-                                <dd> <strong>Stage d'une semaine à Grand Optical</strong>
-                                    <ul>
-                                        <li>Fabrication de verres de lunettes et montage</li>
-                                        <li>Accueil des clients</li>
-                                    </ul>
-                                </dd>
-                            </dl>
+                        <div class="row filiere">
+                            <div class="visible-xs col-xs-offset-3 col-xs-6"> <img src="img/parcours-pro/grandoptical.png" alt="" class="img-responsive img-rounded center-block" id="logo-grdopt">
+                                <br> </div>
+                            <div class="col-xs-12 col-sm-9 col-md-10">
+                                <div class="row flex flex-row">
+                                    <div class="col-xs-3 col-sm-5 text-center">
+                                        <div class="date center-block flex">
+                                            <h4>Février 2009</h4></div>
+                                    </div>
+                                    <dd> <strong>Stage d'une semaine à Grand Optical</strong>
+                                        <ul>
+                                            <li>Fabrication de verres de lunettes et montage</li>
+                                            <li>Accueil des clients</li>
+                                        </ul>
+                                    </dd>
+                                </div>
+                            </div>
                         </div>
                         <div class="hidden-xs col-sm-3 col-md-4"> <img src="img/parcours-pro/grandoptical.png" alt="" class="img-responsive img-rounded center-block" id="logo-grdopt"> </div>
                     </div>
