Modif parcours pro

--- a/parcours-professionnel.html
+++ b/parcours-professionnel.html
@@ -170,45 +170,65 @@
                                         <div class="date center-block flex">
                                             <h4>Février 2009</h4></div>
                                     </div>
-                                    <dd> <strong>Stage d'une semaine à Grand Optical</strong>
+                                    <div class="col-xs-9 col-sm-7 flex"> <strong>Stage au Grand Optical</strong>
                                         <ul>
-                                            <li>Fabrication de verres de lunettes et montage</li>
+                                            <li>Fabrication de verres de lunettes</li>
+                                            <li>Montage des verres</li>
                                             <li>Accueil des clients</li>
+                                            <li>Gestion de commandes</li>
                                         </ul>
-                                    </dd>
+                                    </div>
                                 </div>
                             </div>
+                            <div class="hidden-xs col-sm-3 col-md-2 flex"> <img src="img/parcours-pro/grandoptical.png" alt="" class="img-responsive img-rounded center-block" id="logo-grdopt"> </div>
                         </div>
-                        <div class="hidden-xs col-sm-3 col-md-4"> <img src="img/parcours-pro/grandoptical.png" alt="" class="img-responsive img-rounded center-block" id="logo-grdopt"> </div>
                     </div>
                     <!-- FIN Stages -->
                     <!-- DEBUT Associatif -->
                     <div class="row tab-pane fade" id="associatif">
-                        <div class="visible-xs col-xs-offset-3 col-xs-6"> <img src="img/parcours-pro/aps.png" alt="" class="img-responsive img-rounded center-block" id="logo-aps" width="200">
-                            <br> </div>
-                        <div class="col-xs-12 col-sm-9 col-md-8">
-                            <dl class="dl-horizontal"> <dt>2014 - 2015</dt>
-                                <dd><strong>Membre Actif de l'Amicale Paris Sciences</strong>
-                                    <ul>
-                                        <li>Réalisation de projets tout au long de l'année :
-                                            <ul>
-                                                <li>De nombreux petits projets</li>
-                                                <li>Quelques projets de plus grande importance</li>
-                                            </ul>
-                                        </li>
-                                        <li>Organisation d'événements :
-                                            <ul>
-                                                <li>Des petits déjeuners ou des afterworks</li>
-                                                <li>Des soirées ou des voyages</li>
-                                            </ul>
-                                        </li>
-                                    </ul>
-                                </dd> <dt>2015 - 2016</dt>
-                                <dd><strong>Vice-Président chargé de communication à l'Amicale Paris Sciences</strong></dd> <dt>2016 - 2017</dt>
-                                <dd><strong>Membre Ancien de l'Amicale Paris Sciences</strong></dd>
-                            </dl>
+                        <div class="row filiere">
+                            <div class="visible-xs col-xs-offset-3 col-xs-6"> <img src="img/parcours-pro/aps.png" alt="" class="img-responsive img-rounded center-block" id="logo-aps" width="200">
+                                <br> </div>
+                            <div class="col-xs-12 col-sm-9 col-md-10">
+                                <div class="row flex flex-row">
+                                    <div class="col-xs-3 col-sm-5 text-center">
+                                        <div class="date center-block flex">
+                                            <h4>2014 - 2015</h4></div>
+                                    </div>
+                                    <div class="col-xs-9 col-sm-7 flex"> <strong>Membre Actif de l'Amicale Paris Sciences</strong>
+                                        <ul>
+                                            <li>Réalisation de projets tout au long de l'année :
+                                                <ul>
+                                                    <li>De nombreux petits projets</li>
+                                                    <li>Quelques projets de plus grande importance</li>
+                                                </ul>
+                                            </li>
+                                            <li>Organisation d'événements :
+                                                <ul>
+                                                    <li>Des petits déjeuners ou des afterworks</li>
+                                                    <li>Des soirées ou des voyages</li>
+                                                </ul>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="row flex flex-row">
+                                    <div class="col-xs-3 col-sm-5 text-center">
+                                        <div class="date center-block flex">
+                                            <h4>2015 - 2016</h4></div>
+                                    </div>
+                                    <div class="col-xs-9 col-sm-7 flex"><strong>Vice-Président chargé de communication à l'Amicale Paris Sciences</strong></div>
+                                </div>
+                                <div class="row flex flex-row">
+                                    <div class="col-xs-3 col-sm-5 text-center">
+                                        <div class="date center-block flex">
+                                            <h4>2016 - 2017</h4></div>
+                                    </div>
+                                    <div class="col-xs-9 col-sm-7 flex"><strong>Membre Ancien de l'Amicale Paris Sciences</strong></div>
+                                </div>
+                            </div>
+                            <div class="hidden-xs col-sm-3 col-md-2 flex"> <img src="img/parcours-pro/aps.png" alt="" class="img-responsive img-rounded center-block" id="logo-aps" width="200"> </div>
                         </div>
-                        <div class="hidden-xs col-sm-3 col-md-4"> <img src="img/parcours-pro/aps.png" alt="" class="img-responsive img-rounded center-block" id="logo-aps" width="200"> </div>
                     </div>
                     <!-- FIN Associatif -->
                 </div>
