--- a/parcours-professionnel.html
+++ b/parcours-professionnel.html
@@ -217,14 +217,26 @@
                                         <div class="date center-block flex">
                                             <h4>2015 - 2016</h4></div>
                                     </div>
-                                    <div class="col-xs-9 col-sm-7 flex"><strong>Vice-Président chargé de communication à l'Amicale Paris Sciences</strong></div>
+                                    <div class="col-xs-9 col-sm-7 flex"><strong>Vice-Président chargé de communication à l'Amicale Paris Sciences</strong>
+                                        <ul>
+                                            <li>Gestion d'un serveur linux hébergé par 1&amp;1</li>
+                                            <li>Création d'un site basé sur Joomla</li>
+                                            <li>Création du template du site</li>
+                                            <li>Gestion de comptes Facebook, Twitter, et YouTube</li>
+                                        </ul>
+                                    </div>
                                 </div>
                                 <div class="row flex flex-row">
                                     <div class="col-xs-3 col-sm-5 text-center">
                                         <div class="date center-block flex">
                                             <h4>2016 - 2017</h4></div>
                                     </div>
-                                    <div class="col-xs-9 col-sm-7 flex"><strong>Membre Ancien de l'Amicale Paris Sciences</strong></div>
+                                    <div class="col-xs-9 col-sm-7 flex"><strong>Membre Ancien de l'Amicale Paris Sciences</strong>
+                                        <ul>
+                                            <li>Rôle de conseil pour le nouveau Bureau</li>
+                                            <li>Aide ponctuelle pour l'organisation de certains événementq</li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
                             <div class="hidden-xs col-sm-3 col-md-2 flex"> <img src="img/parcours-pro/aps.png" alt="" class="img-responsive img-rounded center-block" id="logo-aps" width="200"> </div>
